# ComputerVisionFinalProject

./: .gitignore  Computer Vision Project Report.docx  README.md  classify_rps.py  contour_detection.py  face_detection.py  face_tracking.py  feature_extraction.py  game_logic.py  gesture_detection.py  label_encoder.pkl  main.py  photo_editor.py  pyproject.toml  train_ml_model.ipynb  train_ml_model.py  winner_screen.py  xgboost_rps.pkl
cnn_models/: cnn_model_light_extra.keras  cnn_model_med_new.keras
runs/detect/train/: args.yaml
yolo_model/: args.yaml  results.csv
