[project]
name = "computervisionfinalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "importlib-resources>=7.1.0",
    "keras>=3.14.1",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.10",
    "ultralytics>=8.4.48",
]
